# esp32s3-test

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: main.rs
src/commands/: mod.rs
src/loops/: mod.rs  usb_event.rs  wifi_event.rs
