[package]
name = "esp32s3-test"
version = "0.1.0"
authors = ["ryan"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-ipv4",
] }

esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = ["esp32s3"] }
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.11.0", features = [
    "esp32s3",
    "esp-alloc",
    "wifi",
    "utils",
    "esp-now",
] }
esp-alloc = "0.5.0"
heapless = "0.8.0"
embedded-io = "0.6.1"
embassy-executor = "0.6.3"
esp-hal-embassy = { version = "0.5.0", features = ["esp32s3"] }
embassy-sync = "0.6.1"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 's'

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[[bin]]
name = "esp32s3-test"
test = false
doctest = false
bench = false
